--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anstyle = "1.0.8"
+chrono = "0.4.38"
+env_logger = "0.11.5"
+log = "0.4.22"
 ureq = { version = "2.10.1", features = ["native-certs"] }
