--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anstyle = "1.0.8"
+anyhow = { version = "1.0.89", features = ["backtrace"] }
 chrono = "0.4.38"
 env_logger = "0.11.5"
 log = "0.4.22"
