--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 [dependencies]
 anstyle = "1.0.8"
 anyhow = { version = "1.0.89", features = ["backtrace"] }
+bincode = "1.3.3"
 chrono = "0.4.38"
 env_logger = "0.11.5"
 log = "0.4.22"
+serde = { version = "1.0.210", features = ["alloc", "derive"] }
 ureq = { version = "2.10.1", features = ["native-certs"] }
