--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,7 @@ bincode = "1.3.3"
 chrono = "0.4.38"
 env_logger = "0.11.5"
 log = "0.4.22"
+nix = { version = "0.29.0", features = ["poll"] }
 serde = { version = "1.0.210", features = ["alloc", "derive"] }
+socket2 = { version = "0.5.7", features = ["all"] }
 ureq = { version = "2.10.1", features = ["native-certs"] }
