--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 anstyle = "1.0.8"
 anyhow = { version = "1.0.89", features = ["backtrace"] }
 bincode = "1.3.3"
+bytes_parser = "0.1.5"
 chrono = "0.4.38"
 env_logger = "0.11.5"
 log = "0.4.22"
