--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ chrono = "0.4.38"
 env_logger = "0.11.5"
 log = "0.4.22"
 nix = { version = "0.29.0", features = ["poll"] }
+quick-xml = "0.37.1"
 serde = { version = "1.0.210", features = ["alloc", "derive"] }
 socket2 = { version = "0.5.7", features = ["all"] }
 ureq = { version = "2.10.1", features = ["native-certs"] }
