--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ bytes_parser = "0.1.5"
 chrono = "0.4.38"
 env_logger = "0.11.5"
 log = "0.4.22"
-nix = { version = "0.29.0", features = ["poll"] }
+nix = { version = "0.29.0", features = ["event"] }
 quick-xml = "0.37.1"
 serde = { version = "1.0.210", features = ["alloc", "derive"] }
 socket2 = { version = "0.5.7", features = ["all"] }
